# geocaching_mystery_snippets

./: .gitignore  README.md  environment.yml  pyproject.toml
anagram_matcher/: main.py
anagram_matcher/rivers_tyrol/: input_dict.txt
combinatory/: solve.py
decrypt_caesar/: decrypt_text.py
decrypt_letter_frequency/: decrypt_text.py  letter_frequencies.csv
number_riddles/: cnt_numbers_0_to_9.ipynb  matrix_crossing.ipynb  multiply_find_digits.ipynb
php_login_bruteforce/: login_bruteforce.py  psw_generator.py
prime/: prime.py
scripts/anagram_matcher/: main.py
scripts/anagram_matcher/rivers_tyrol/: input_tomatch.txt
scripts/anagram_matcher/usernames_tyrol/: input_dict.txt  input_tomatch.txt
scripts/nonogram_solver/: nonogramsolver.py
scripts/number_riddles/: multiply_find_digits.ipynb  pyramid_row_sum.ipynb
scripts/php_login_bruteforce/: psw_generator.py
scripts/webscraper_powertrail/: donauradweg.py  fredbull_powertrail_K_lahmer_kaiser.py  lovewalk.py  wuff.py
src/geocaching_mystery_snippets/utils/: geocaching_api.py
utils/: geocaching_api.py
webscraper/: schlaflos.py
webscraper_powertrail/: donauradweg.py  fredbull_powertrail_K_lahmer_kaiser.py  fredbull_powertrail_lake_me.py  fredbull_powertrail_m_doppeladlerin.py  lovewalk.py  main.py  main2.py  turm.py  wuff.py
