[project]
name = "geocaching_mystery_snippets"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Gregor Ehrensperger", email = "g@ehrensperger.dev"},
]
dependencies = ["pandas>=2.2.3", "simplejson>=3.19.3", "numpy>=2.2.2", "requests>=2.32.3", "sympy>=1.13.3", "bs4>=0.0.2", "pyperclip>=1.9.0", "ipython>=8.32.0", "jupyterlab>=4.3.5"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
